--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 
-sonar.projectKey=RetoTL-Master
-sonar.projectName=RetoTL-Master
+sonar.projectKey=Urgencias-Master
+sonar.projectName=Urgencias-Master
 sonar.projectVersion=1.0
 
 sonar.scm.disabled=false
@@ -12,9 +12,9 @@ sonar.java.target=1.8
 sonar.modules=infrastructure,domain,application
 
 
-infrastructure.sonar.projectBaseDir=./Reto-Back/infrastructure
-domain.sonar.projectBaseDir=./Reto-Back/domain
-application.sonar.projectBaseDir=./Reto-Back/application
+infrastructure.sonar.projectBaseDir=./Urgencias-Back/infrastructure
+domain.sonar.projectBaseDir=./Urgencias-Back/domain
+application.sonar.projectBaseDir=./Urgencias-Back/application
 
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
