--- a/Urgencias-Back/infrastructure/build.gradle
+++ b/Urgencias-Back/infrastructure/build.gradle
@@ -1,60 +1,26 @@
-buildscript {
-
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.7.RELEASE")
-	}
-}
-
 plugins {
+	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'java'
-    id 'jacoco'
-   	id 'eclipse'
-    
+	id 'java'
 }
 
-group = 'co.com.ceiba'
+group = 'Urgencias'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
-configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'com.h2database:h2'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
 
-repositories {
-    mavenCentral()
-}
-
-
-dependencies {
-	implementation project(':domain')
-	implementation project(':application')
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'org.springframework:spring-jdbc'
-	implementation 'com.h2database:h2:1.4.199'
-	implementation 'com.google.code.gson:gson'
-	implementation 'org.springframework.amqp:spring-rabbit'
-
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    
-    testImplementation 'org.springframework:spring-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-all:1.10.19'
-    testCompile "com.github.tomakehurst:wiremock-jre8:2.25.0"
-}
-
-jacocoTestReport{
-    reports {
-        xml.enabled true
-        csv.enabled true
-        html.destination file("${buildDir}/test-results/jacocoHtml")
-    }
-
+test {
+	useJUnitPlatform()
 }
