Se actualiza la arquitectura del proyecto

--- a/Urgencias-Back/settings.gradle
+++ b/Urgencias-Back/settings.gradle
@@ -1,5 +1,5 @@
-rootProject.name = 'urgencias'
+rootProject.name = 'cinema'
 
-include ':domain',
-		':application',
-        ':infrastructure'
+include ':aplicacion', 
+		':dominio', 
+		':infraestructura'
