--- a/Urgencias-Back/dominio/build.gradle
+++ b/Urgencias-Back/dominio/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'jacoco'
 
 group = 'com.ceiba'
 version = '0.0.1-SNAPSHOT'
@@ -15,4 +16,13 @@ dependencies {
 
 	testImplementation 'junit:junit:4.12'
   	testImplementation 'org.mockito:mockito-all:1.10.19'
+}
+
+jacocoTestReport{
+    reports {
+        xml.enabled true
+        csv.enabled true
+        html.destination file("${buildDir}/test-results/jacocoHtml")
+    }
+
 }
