--- a/Urgencias-Back/infraestructura/build.gradle
+++ b/Urgencias-Back/infraestructura/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.3.RELEASE'
 	id 'java'
+	id 'jacoco'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -37,4 +38,13 @@ dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+}
+
+jacocoTestReport{
+    reports {
+        xml.enabled true
+        csv.enabled true
+        html.destination file("${buildDir}/test-results/jacocoHtml")
+    }
+
 }
