Se actualiza el archivo de configuración de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,12 +9,12 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
 sonar.java.target=1.8
 
-sonar.modules=infrastructure,domain,application
+sonar.modules=infraestructura,dominio,aplicacion
 
 
-infrastructure.sonar.projectBaseDir=./Urgencias-Back/infrastructure
+infrastructure.sonar.projectBaseDir=./Urgencias-Back/infraestructura
 domain.sonar.projectBaseDir=./Urgencias-Back/domain
-application.sonar.projectBaseDir=./Urgencias-Back/application
+application.sonar.projectBaseDir=./Urgencias-Back/aplicacion
 
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
