--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,9 @@ sonar.java.target=1.8
 sonar.modules=infraestructura,dominio,aplicacion
 
 
-infrastructure.sonar.projectBaseDir=./Urgencias-Back/infraestructura
-domain.sonar.projectBaseDir=./Urgencias-Back/domain
-application.sonar.projectBaseDir=./Urgencias-Back/aplicacion
+infraestructura.sonar.projectBaseDir=./Urgencias-Back/infraestructura
+dominio.sonar.projectBaseDir=./Urgencias-Back/domain
+aplicacion.sonar.projectBaseDir=./Urgencias-Back/aplicacion
 
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
