Se ajusta archivo de configuración de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.modules=infraestructura,dominio,aplicacion
 
 
 infraestructura.sonar.projectBaseDir=./Urgencias-Back/infraestructura
-dominio.sonar.projectBaseDir=./Urgencias-Back/domain
+dominio.sonar.projectBaseDir=./Urgencias-Back/dominio
 aplicacion.sonar.projectBaseDir=./Urgencias-Back/aplicacion
 
 sonar.sources=src/main/java/
