--- a/Urgencias-Back/dominio/build.gradle
+++ b/Urgencias-Back/dominio/build.gradle
@@ -1,6 +1,11 @@
+plugins {
+	id 'org.springframework.boot' version '2.2.0.RELEASE'
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'jacoco'
+apply plugin: 'io.spring.dependency-management'
+
 
 group = 'com.ceiba'
 version = '0.0.1-SNAPSHOT'
@@ -12,12 +17,20 @@ repositories {
 
 dependencies {
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'com.h2database:h2'
+
 	compileOnly 'org.projectlombok:lombok:1.16.18'
 
 	testImplementation 'junit:junit:4.12'
   	testImplementation 'org.mockito:mockito-all:1.10.19'
 }
-
+bootJar {
+	manifest {
+		attributes 'Start-Class': 'com.ceiba.ExampleApplication'
+	}
+}
 jacocoTestReport{
     reports {
         xml.enabled true
