Se actualiza arquitectura del proyecto

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,13 +9,10 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
 sonar.java.target=1.8
 
-sonar.modules=infraestructura,dominio,aplicacion
+sonar.modules=urgencias
 
 
-infraestructura.sonar.projectBaseDir=./Urgencias-Back/infraestructura
-dominio.sonar.projectBaseDir=./Urgencias-Back/dominio
-aplicacion.sonar.projectBaseDir=./Urgencias-Back/aplicacion
-
+urgencias.sonar.projectBaseDir=./Urgencias-Back
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
 sonar.tests=src/test/java/
