Ajuste en sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,10 +12,10 @@ sonar.java.target=1.8
 sonar.modules=urgencias
 
 
-urgencias.sonar.projectBaseDir=./Urgencias-Back
-sonar.sources=src/main/java/
+#//urgencias.sonar.projectBaseDir=./Urgencias-Back
+sonar.sources=src/main/java
 sonar.java.binaries=build/classes/java/main
-sonar.tests=src/test/java/
+sonar.tests=src/test/java
 #sonar.java.test.binaries=build/classes/java/test
 
 sonar.java.coveragePlugin=jacoco
