Se ajusta sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
 sonar.java.target=1.8
 
-sonar.modules=urgencias
+#//sonar.modules=urgencias
 
 
 #//urgencias.sonar.projectBaseDir=./Urgencias-Back
