Se actualizan archivos de configuración

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,10 +9,10 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
 sonar.java.target=1.8
 
-sonar.modules=consultorio
+sonar.modules=urgencias
 
 
-#consultorio.sonar.projectBaseDir=./consultorio
+urgencias.sonar.projectBaseDir=./Urgencias-Servicio
 
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
