Se añaden pruebas unitarias

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ urgencias.sonar.projectBaseDir=./Urgencias-Servicio
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
 sonar.tests=src/test/java/
-#sonar.java.test.binaries=build/classes/java/test
+sonar.java.test.binaries=build/classes/java/test
 
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPaths=build/jacoco/test.exec
